# Study-Evaluation-Pipeline

./: .env.example  .gitignore  README.md  api_test.py  comebine_csv_answers.py  compare_answers.py  config.yaml  correct_answers_validation.csv  create_csv.py  display_runs.py  edit_run_information.py  env_manager.py  evaluate_raw.py  evaluate_reconciliation.py  evaluation.py  export_results_as_csv.py  gemini_pipeline.py  get_model_name.py  gpt_file_cleaner.py  gpt_file_manager.py  gpt_pipeline.py  gpt_text_pipeline.py  json_to_csv.py  load_saved_json.py  main.py  ollama_pipeline.py  pdf_reader.py  pipeline_manager.py  prompt_manager.py  prompts.json  pyproject.toml  reconciliation.py  reconciliation_manager.py  request_manager.py  requirements.txt  run_manager.py  save_raw_data.py  saved_files.json  uploaded_gpt_files.json
configs/: config.yaml  papers.yaml
resources/: base_prompt.json  inverted_prompt_1.json  prompt_designer.json  prompts.json  uploaded_gpt_files.json
resources/csv/: correct_answers-invert.csv  correct_answers.CSV  correct_answers_combined-invert.csv  correct_answers_combined.CSV  human_reviewer_answers.csv
scripts/: csv_invert_answer.py
src/: display_runs.py  env_manager.py  main.py  prompt_manager.py  reconciliation.py  reconciliation_manager.py  save_raw_data.py
src/api_request/: api_test.py  gemini_pipeline.py  gpt_pipeline.py  gpt_text_pipeline.py  ollama_pipeline.py  request_manager.py
src/evaluation/: evaluation.py  export_results_as_csv.py
src/sep/: display_runs.py  env_manager.py  logger.py  process_paper.py  prompt_manager.py  run.py
src/sep/api/: run_api.py
src/sep/api_request/: api_test.py  custom_api.py  gemini_pipeline.py  gpt.py  gpt_text_pipeline.py  mock_api.py  ollama_pipeline.py  request_manager.py
src/sep/cli/: cli.py
src/sep/core/api_request/: custom_api.py  deepseek.py  gpt.py
src/sep/core/evaluation/: comebine_csv_answers.py  compare_answers.py  create_csv.py  edit_run_information.py  evaluate_reconciliation.py  evaluate_run.py  export_results_as_csv.py  load_saved_json.py  load_saved_run.py  parse_csv_answers.py  set_attribute_of_run.py
src/sep/core/file_manager/: file_manager.py
src/sep/core/models/: llm_meta.py
src/sep/core/models/llm_runs/: evaluation.py  request.py  run.py
src/sep/core/paper2llm/: process_paper.py
src/sep/core/prompt_designer/: adjust_prompt.py  get_correct_answers.py  json_log.py  run_prompt_design.py
src/sep/core/reconciliation/: reconciliation.py  reconciliation_manager.py
src/sep/core/utils/: get_model_name.py  load_json.py
src/sep/evaluation/: compare_answers.py  compare_answers_pandas.py  create_csv.py  evaluate_reconciliation.py  evaluate_run.py  export_results_as_csv.py  load_saved_json.py  load_saved_run.py  save_raw_data.py
src/sep/models/llm_runs/: request.py  run.py
src/sep/paper2llm/: cli.py  manager.py  worker.py
src/sep/prompt_designer/: adjust_prompt.py  json_log.py  prompt_designer_log.json  run_prompt_design.py
src/sep/reconciliation/: reconciliation.py  reconciliation_manager.py
src/sep/runner/: manager.py  models.py  worker.py
src/sep/utils/: get_model_name.py  get_run_dir.py  gpt_file_manager.py
src/utils/: get_model_name.py  gpt_file_manager.py
tests/: evaluation_test.py  load_saved_json_test.py
tests/prompt_designer/: test_prompt_designer.py  test_run_prompt_designer.py
tests/test_data/test_results/: raw-0005-20250115-130435.json  raw-0005-20250508-135152.json
